--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
-{
+
   "name": "Animated Overlap Venn Diagram",
   "organization": "Your Name or Company",
   "description": "An animated and responsive Venn Diagram to visualize the overlap between two distinct metric groups.",
   "logoUrl": "https://placehold.co/48x48/640a50/ffffff?text=VD",
-  "supportUrl": "https://your-github-repo-url/README.md",
+  "supportUrl": "https://github.com/ayushgharge-ops/ls-assets/README.md",
   "privacyPolicyUrl": "https://www.google.com/policies/privacy/",
   "templates": {
     "default": {
@@ -33,7 +33,7 @@
       "id": "default",
       "name": "Venn Diagram Overlap",
       "iconUrl": "https://placehold.co/48x48/640a50/ffffff?text=VD",
-      "html": "https://raw.githubusercontent.com/YOUR_GITHUB_USER/YOUR_REPO_NAME/main/looker_studio_venn.html",
+      "html": "https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/looker_studio_venn.html",
       "allowOverride": true
     }
   ]
